creusot/tests/should_fail/prusti/match/in_spec.stderr
error[creusot]: invalid mut dereference of zombie expression with lifetime `{'post|'b}` in state `'post`
 --> in_spec.rs:4:1
  |
4 | #[ensures(*(if b {x} else {result}) == 5u32)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ensures` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

